# pyproject.toml — Project metadata and dependency declarations for portrait_prompt_builder

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "portrait_prompt_builder"
version = "0.1.0"
description = "A lightweight web app that guides users through a structured form to generate optimized AI image prompts for the viral 'childhood self portrait' trend."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Portrait Prompt Builder", email = "dev@example.com" }
]
keywords = ["flask", "ai", "prompt", "portrait", "image-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Flask",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
dependencies = [
    "flask>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-flask>=1.3.0",
]

[project.scripts]
portrait-prompt-builder = "portrait_prompt_builder:create_app"

[tool.setuptools.packages.find]
where = ["."]
include = ["portrait_prompt_builder*"]

[tool.setuptools.package-data]
portrait_prompt_builder = [
    "templates/*.html",
    "static/*.css",
    "static/*.js",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["portrait_prompt_builder"]
omit = ["tests/*"]
